# infini-logging

./: .gitignore  README.md  infini.toml  pyproject.toml  tests.py
src/: __init__.py  events.py  handlers.py  interceptors.py
