[project]
name = "infini-logger"
version = "0.1.0-beta.1"
description = "日志系统"
authors = [
    {name = "苏向夜", email = "fu050409@163.com"},
]
dependencies = [
    "infini>=2.0.4",
    "diceutils>=0.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.1",
    "ipdm>=0.1.3",
]
